<resources>
    <string name="app_name">dentistaApp</string>
    <string name="logo">Logo</string>
    <string name="email">E-mail</string>
    <string name="emailCad">E-mail:</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="criarcad">Cadastro</string>
    <string name="cad">Ainda Não Possui Uma Conta ?</string>
    <string name="tituloCad">Cadastro</string>
    <string name="nomeCad">Nome:</string>
    <string name="cpfCad">CPF:</string>
    <string name="telefoneCad">Telefone:</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Endereco1Cad">Endereço 1:</string>
    <string name="Endereco2Cad">Endereço 2:</string>
    <string name="Endereco3Cad">Endereço 3:</string>
    <string name="CurriculoCad">Curriculo:</string>
    <string name="CurriculoTamCad">Maximo de 2000 Palavras</string>
    <string name="senhaCad">Senha:</string>
    <string name="nomePerfil">Nome</string>
    <string name="emailPerfil">E-mail</string>
    <string name="telefonePerfil">Telefone</string>
    <string name="statusPerfil">Status</string>
    <string name="statusOn">On</string>
    <string name="statusOff">Off</string>
    <string name="alterarftPerfil">Alterar foto de perfil</string>
    <string name="alterarEndereco">Alterar Endereço</string>
    <string name="alterarCurriculo">Alterar currículo</string>
    <string name="chamadaEmergencia">Chamadas de Emergência</string>
    <string name="minutagem1">Há 1 min.</string>
    <string name="minutagem2">Há 8 min.</string>
    <string name="minutagem3">Há 23 min.</string>
    <string name="minutagem4">Há 51 min.</string>
    <string name="minutagem5">Há 2 horas</string>
    <string name="btnAceitar">Aceitar</string>
    <string name="btnRejeitar">Rejeitar</string>
</resources>