<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >


        <ImageView
            android:id="@+id/ivLogoCadastro"
            android:src="@drawable/teethkidsicone"
            android:layout_width="86dp"
            android:layout_height="76dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="170dp"/>

        <TextView
            android:id="@+id/tvNomeCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/nomeCad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/ivLogoCadastro"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etNomeCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvNomeCad"
            />

        <TextView
            android:id="@+id/tvCpfCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/cpfCad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/etNomeCad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etCpfCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvCpfCad"
            />

        <TextView
            android:id="@+id/tvEmailCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/emailCad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/etCpfCad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etEmailCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvEmailCad"
            />

        <TextView
            android:id="@+id/tvSenhaCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/senhaCad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/etEmailCad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etSenhaCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="20"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvSenhaCad"
            />
        <TextView
            android:id="@+id/tvTelefoneCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/telefoneCad"
            android:layout_below="@id/etSenhaCad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etTelefoneCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvTelefoneCad"
            />

        <TextView
            android:id="@+id/tvEndereco1Cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/Endereco1Cad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/etTelefoneCad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etEndereco1Cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvEndereco1Cad"
            />

        <TextView
            android:id="@+id/tvEndereco2Cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/Endereco2Cad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/etEndereco1Cad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etEndereco2Cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvEndereco2Cad"
            />

        <TextView
            android:id="@+id/tvEndereco3Cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/Endereco3Cad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/etEndereco2Cad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etEndereco3Cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_below="@id/tvEndereco3Cad"
            />

        <TextView
            android:id="@+id/tvCurriculoCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:text="@string/CurriculoCad"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/etEndereco3Cad"
            />

        <EditText
            style="@style/Edit_text"
            android:id="@+id/etCurriculoCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:hint="Máximo de 2000 palavras"
            android:maxLength="2000"
            android:layout_below="@id/tvCurriculoCad"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCriarCad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etCurriculoCad"
            android:text="@string/Cadastrar"
            android:background="@drawable/button"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>
</ScrollView>

